-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
Security 2021-09-20
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/db/modules/enterprise/src/ldap/connections/openldap_connection.cpp:122: UNINIT_CTOR 120722 The compiler-generated constructor for this class does not initialize "_bypassLock".