SERVER-59894 Coverity analysis defect: uninitialized scalar field

GitOrigin-RevId: eaad5f170af37079dc837efe02c7af2384eda2f4